text entry, orientation fixes

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     </head>
 
     <body>
+        <div id="wrong_orientation"><img src="images/reorient_image.jpg"></div>
         <div id="container">
             <textarea id="stressText" vertical-align="top"  placeholder="Type stress here" type="textarea"></textarea>
+            <button id="stressButton">DONE</button>
             <canvas id="canvas"width="752" height="420">
                 Your browser doesn't support this game.
             </canvas>
