--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
             </canvas>
         </div>
         <script src="howler.min.js"></script>
-        <script src="app.js"></script>
+        <script src="app.min.js"></script>
     </body>
 </html>
